--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,8 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
+    <div ng-include="'views/nav.html'"></div>
+    <div ng-show="error" class="text-danger">{{ error }}</div>
     <div class="container" ng-view=""></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
@@ -68,8 +70,12 @@
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
+        <script type='text/javascript' src='https://cdn.firebase.com/js/simple-login/1.4.1/firebase-simple-login.js'></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/posts.js"></script>
+        <script src="scripts/controllers/nav.js"></script>
+        <script src="scripts/services/auth.js"></script>
+        <script src="scripts/services/user.js"></script>
         <script src="scripts/services/post.js"></script>
         <!-- endbuild -->
 </body>
